--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
 
     <string name="app_name">TouchWave</string>
-
+    <string name="facebook_app_id">1791581581070293</string>
 </resources>
